[package]
name = "tick-encoding"
description = "A simple encoding scheme to encode binary data into ASCII strings"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Kyle Lacy <rust@kyle.space>"]
repository = "https://github.com/kylewlacy/tick-encoding"
license = "MIT OR Unlicense"
categories = ["encoding"]
keywords = ["bytes", "binary", "encoding", "percent"]

[dependencies]
thiserror = "1.0.56"

[dev-dependencies]
assert_matches = "1.5.0"
divan = "0.1.11"
proptest = "1.4.0"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
