[package]
name = "tick-encoding"
description = "A simple encoding scheme to encode binary data into ASCII strings"
version = "0.1.3"
edition = "2021"
rust-version = "1.70.0"
authors = ["Kyle Lacy <rust@kyle.space>"]
repository = "https://github.com/kylewlacy/tick-encoding"
license = "MIT OR Unlicense"
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["bytes", "binary", "encoding", "percent"]

[features]
default = ["std"]
std = ["alloc", "dep:thiserror"]
alloc = []
safe = []

[dependencies]
thiserror = { version = "2.0.18", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
divan = "0.1.15"
proptest = "1.6.0"

[[bench]]
name = "decode_in_place"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "functions"
harness = false
